welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:3: error: type mismatch;
 found   : Int
 required: String
  mark(cpt)
       ^Diagonal:8: error: type mismatch;
 found   : Int
 required: String
      mark(cpt)
           ^Diagonal:12: error: type mismatch;
 found   : Int
 required: String
    mark(cpt)
         ^Diagonal:17: error: method diag is defined twice
  conflicting symbols both originated in file 'plm.runtime12.Diagonal'
def diag(){
    ^